@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>,
 Build-Depends: debhelper (>= 9),
-               openstack-pkg-tools,
                dh-python,
+               openstack-pkg-tools (>= 52~),
                python-all,
                python-setuptools,
                python3-all,
