@@ -6,6 +6,7 @@ python-monotonic (1.1-1) experimental; urgency=medium
 
   [ Thomas Goirand ]
   * New upstream release.
+  * Using pkgos-dh_auto_install from openstack-pkg-tools >= 52~.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 13 Jul 2016 21:59:28 +0200
 
